style: fixed article paragraph contrast

--- a/src/common/routes/edu/edu.scss
+++ b/src/common/routes/edu/edu.scss
@@ -33,3 +33,7 @@
   box-shadow: 0 4px 0 #000000;
   font-weight: bold;
 }
+
+.format {
+  color: #303030 !important;
+}
